welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:4: error: type mismatch;
 found   : Unit
 required: Int
  } else if (a%5==b%5) {
         ^